--- a/whatsapp/src/components/Login/styles.css
+++ b/whatsapp/src/components/Login/styles.css
@@ -2,9 +2,28 @@
     width: 100vw;
     height: 100vh;
     background-color: #D2DBDC;
+    position: fixed;
     display: flex;
     align-items: center;
+    z-index: 1;
     justify-content: center;
+}
+
+.container {
+    width: 250px;
+    height: 500px;
+    display: flex;
+    z-index: 2;
+    background-color: #000;
+    justify-content: center;
+    align-items: center;
+}
+
+.title h1 {
+    font-size: 30px;
+    justify-content: center;
+    text-align: center;
+    color: royalblue;
 }
 
 .loginButton {
@@ -12,8 +31,11 @@
     height: 50px;
     border-radius: 15px;
     background-color: royalblue;
+    margin-left: 75px;
     color: #FFF;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 14px;
+    font-weight: bold;
 }
