--- a/whatsapp/src/App.css
+++ b/whatsapp/src/App.css
@@ -30,6 +30,14 @@ header {
   padding: 0 15px;
 }
 
+.header-name{
+  margin-right: 60px;
+  font-size: 17px;
+  font-weight: bold;
+  color:#404040;
+  
+}
+
 .header-avatar {
   width: 40px;
   height: 40px;
